--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-data_all_years/201306-citibike-tripdata.csv
-data_all_years/201406-citibike-tripdata.csv
-data_all_years/201506-citibike-tripdata.csv
-data_all_years/201606-citibike-tripdata.csv
-data_all_years/201706-citibike-tripdata.csv
-data_all_years/201806-citibike-tripdata.csv
-data_all_years/201906-citibike-tripdata.csv
-data_all_years/202006-citibike-tripdata.csv
-data_all_years/202106-citibike-tripdata.csv
-data_all_years/202206-citibike-tripdata.csv
-data_all_years/202306-citibike-tripdata.csv
-output_datasets/yearly_data.csv
+201306-citibike-tripdata.csv
+201406-citibike-tripdata.csv
+201506-citibike-tripdata.csv
+201606-citibike-tripdata.csv
+01706-citibike-tripdata.csv
+201806-citibike-tripdata.csv
+201906-citibike-tripdata.csv
+202006-citibike-tripdata.csv
+202106-citibike-tripdata.csv
+202206-citibike-tripdata.csv
+202306-citibike-tripdata.csv
+yearly_data.csv
